@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.11'
 }
 
 apply from: 'https://raw.githubusercontent.com/Legyver/common-build/1.4/jarsigner.gradle'
@@ -8,7 +9,7 @@ apply from: 'https://raw.githubusercontent.com/Legyver/common-build/1.4/jarsigne
 group 'com.legyver.logmire'
 
 ext {
-    fenxlibVersion = "2.0.0.0-rc1"
+    fenxlibVersion = "3.1.0-alpha.1"
     log4jVersion = "2.13.3"
 }
 
@@ -19,31 +20,31 @@ repositories {
 
 dependencies {
     //ui
-//    compile 'com.jfoenix:jfoenix:8.0.7' // Java 8
+    implementation group: 'com.legyver', name: 'fenxlib.config.json', version: fenxlibVersion
+    implementation group: 'com.legyver', name: 'fenxlib.extensions.tuktukfx', version: fenxlibVersion
+    implementation group: 'com.legyver', name: 'fenxlib.widgets.about', version: fenxlibVersion
+    implementation group: 'com.legyver', name: 'fenxlib.icons.standard', version: fenxlibVersion
+    implementation group: 'com.legyver', name: 'fenxlib.controls.icon', version: '3.0.1'
 
-    compile group: 'com.legyver', name: 'fenxlib.extensions.tuktukfx', version: fenxlibVersion
-    compile group: 'com.legyver', name: 'fenxlib.widgets.about', version: fenxlibVersion
 
     //File utils
-    compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 
     //logging
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4jVersion
-    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: log4jVersion
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4jVersion
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: log4jVersion
 
-    testCompile group: 'junit', name: 'junit', version: '4.13'
+    testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
 }
 
 application {
-    mainModule = 'com.legyver.logmire.samples' // name defined in module-info.java
+    mainModule = 'com.legyver.logmire' // name defined in module-info.java
     mainClass = 'com.legyver.logmire.MainApplication'
 }
 
-run {
-    //workaround for https://github.com/sshahine/JFoenix/issues/955
-    jvmArgs = [
-            '--add-opens=java.base/java.lang.reflect=com.jfoenix'
-    ]
+javafx {
+    version = '17.0.2'
+    modules = ['javafx.controls', 'javafx.media', 'javafx.swing', 'javafx.web']
 }
